welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
	if (!estFaceMur) avance;
	getCouleurSol() match{
		case Color.green => {baisseBrosse;leveBrosse;return true}
		case _ => if (!estFaceMur) recule;
	}
}